	PR target/30483 	* config/avr/avr.c (ptrreg_to_str): Replace gcc_unreachable() with 	error().

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@123926 138bc75d-0d04-0410-961f-82ee72b054a4